MPIR-34: Update the i18n properties file with these new additions
o updated French language bundle

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@599987 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -37,12 +37,23 @@ report.cim.overview.title                                          = Vue d\u0092
 report.cim.title                                                   = Int\u00E9gration continue
 report.cim.url                                                     = Le lien suivant est celui du syst\u00E8me d\u0092int\u00E9gration continue pour ce projet.
 report.dependencies.column.artifactId                              = ArtifactId
+report.dependencies.column.classifier                              = Classifieur
 report.dependencies.column.description                             = Description
 report.dependencies.column.groupId                                 = GroupId
-report.dependencies.column.optional                                = Optional
+report.dependencies.column.optional                                = Facultatif
+report.dependencies.column.type                                    = Type
 report.dependencies.column.url                                     = URL
 report.dependencies.column.version                                 = Version
 report.dependencies.description                                    = Ce document liste les d\u00E9pendances du projet et fournit les informations sur chaque d\u00E9pendance.
+report.dependencies.file.details.column.classes                    = Classes
+report.dependencies.file.details.column.debug                      = Debug
+report.dependencies.file.details.column.entries                    = Entr\u00E9es
+report.dependencies.file.details.column.file                       = Nome du fichier
+report.dependencies.file.details.column.jdkrev                     = R\u00E9vision du JDK
+report.dependencies.file.details.column.packages                   = Packages
+report.dependencies.file.details.column.sealed                     = Scell\u00E9
+report.dependencies.file.details.column.size                       = Taille
+report.dependencies.file.details.title                             = D\u00E9tails du fichier de d\u00E9pendances
 report.dependencies.graph.tables.licenses                          = Licence
 report.dependencies.graph.tables.title                             = Liste des d\u00E9pendances
 report.dependencies.graph.tables.unknown                           = Inconnu
@@ -55,6 +66,17 @@ report.dependencies.intro.system                                   = Ce qui suit
 report.dependencies.intro.test                                     = Ce qui suit est la liste des d\u00E9pendances de port\u00E9e test pour ce projet. Ces d\u00E9pendances sont requises seulement pour compiler et ex\u00E9cuter les tests unitaires de l\u0092application :
 report.dependencies.name                                           = D\u00E9pendances
 report.dependencies.nolist                                         = Il n\u0092y a aucune d\u00E9pendance pour ce projet. C\u0092est une application autonome qui ne d\u00E9pend d\u0092aucun autre projet.
+report.dependencies.repo.locations.artifact.breakdown              = Localisation du r\u00E9f\u00E9rentiel pour chacune des d\u00E9pendances.
+report.dependencies.repo.locations.cell.release.disabled           = -
+report.dependencies.repo.locations.cell.release.enabled            = Oui
+report.dependencies.repo.locations.cell.snapshot.disabled          = -
+report.dependencies.repo.locations.cell.snapshot.enabled           = Oui
+report.dependencies.repo.locations.column.artifact                 = artefact
+report.dependencies.repo.locations.column.release                  = D\u00E9gagement
+report.dependencies.repo.locations.column.repoid                   = R\u00E9f\u00E9rentiel ID
+report.dependencies.repo.locations.column.snapshot                 = Snapshot
+report.dependencies.repo.locations.column.url                      = URL
+report.dependencies.repo.locations.title                           = Localisation du r\u00E9f\u00E9rentiel des d\u00E9pendances
 report.dependencies.title                                          = D\u00E9pendances du projet
 report.dependencies.unamed                                         = Non-sp\u00E9cifi\u00E9
 report.dependency-convergence.convergence.caption                  = D\u00E9pendances utilis\u00E9es dans les sous-projets
@@ -161,7 +183,7 @@ report.summary.noorganization                                      = Ce projet n
 report.summary.title                                               = R\u00E9sum\u00E9 du projet
 report.summary.value                                               = Valeur
 report.team-list.contributors.actualtime                           = Heure actuelle (GMT)
-report.team-list.contributors.email                                = Email
+report.team-list.contributors.email                                = Courriel
 report.team-list.contributors.intro                                = Les personnes additionnelles suivantes ont contribu\u00E9 \u00E0 ce projet par leurs suggestions, ou leurs apports \u00E0 la documentation ou des patches.
 report.team-list.contributors.name                                 = Nom
 report.team-list.contributors.organization                         = Organisation
@@ -173,9 +195,9 @@ report.team-list.contributors.title                                = Contributeu
 report.team-list.contributors.url                                  = URL
 report.team-list.description                                       = Ce document fournit des informations sur les membres de ce projet. Ce sont les individus qui ont contribu\u00E9 au projet d\u0092une fa\u00E7on ou d\u0092une autre.
 report.team-list.developers.actualtime                             = Heure actuelle (GMT)
-report.team-list.developers.email                                  = Email
+report.team-list.developers.email                                  = Courriel
 report.team-list.developers.id                                     = Id
-report.team-list.developers.intro                                  = Ce qui suit est la liste des d\u00E9veloppeurs avec leurs r\u00F4les qui ont contribu\u00E9 d\u0092une mani\u00E8re ou d\u0092une autre au projet.
+report.team-list.developers.intro                                  = Ce qui suit est la liste des d\u00E9veloppeurs avec leurs r\u00F4les ayant contribu\u00E9 d\u0092une mani\u00E8re ou d\u0092une autre au projet.
 report.team-list.developers.name                                   = Nom
 report.team-list.developers.organization                           = Organisation
 report.team-list.developers.organizationurl                        = URL de l\u0092organisation
@@ -185,7 +207,7 @@ report.team-list.developers.timezone                               = Fuseau hora
 report.team-list.developers.title                                  = Membres
 report.team-list.developers.url                                    = URL
 report.team-list.intro.description1                                = Un projet r\u00E9ussi exige que beaucoup de personnes jouent plusieurs r\u00F4les. Quelques personnes \u00E9crivent le code ou la documentation, alors que d\u0092autres testent, soumettent des patches ou des suggestions.
-report.team-list.intro.description2                                = L\u0092\u00E9quipe est compos\u00E9e des membres et de contributeurs. Les membres ont un acc\u00E8s direct aux sources du projet et font \u00E9voluer activement le code de base. Les contributeurs am\u00E9liorent le projet par la soumission de patches et des suggestions aux membres. Le nombre de contributeurs au projet est illimit\u00E9. Toutes les contributions au projet sont consid\u00E9rablement appr\u00E9ci\u00E9es.
+report.team-list.intro.description2                                = L\u0092\u00E9quipe est compos\u00E9e des membres et de contributeurs. Les membres ont un acc\u00E8s direct aux sources du projet et font \u00E9voluer activement le code de base. Les contributeurs am\u00E9liorent le projet par la soumission de patches et de suggestions aux membres. Le nombre de contributeurs au projet est illimit\u00E9. Toutes les contributions au projet sont consid\u00E9rablement appr\u00E9ci\u00E9es.
 report.team-list.intro.title                                       = L\u0092\u00E9quipe
 report.team-list.name                                              = Membres de ce projet
 report.team-list.nocontributor                                     = Il n\u0092y a aucun contributeur travaillant sur ce projet. V\u00E9rifiez plus tard si des contributeurs ont \u00E9t\u00E9 ajout\u00E9.
