MPIR-34: Update the i18n properties file with these new additions Submitted by: Juven Xu
o applied without review, not Chinese speaker :)

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@599988 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_zh_CN.properties
+++ b/src/main/resources/project-info-report_zh_CN.properties
@@ -37,14 +37,28 @@ report.cim.overview.title                                          = \u6982\u8FF
 report.cim.title                                                   = \u6301\u7EED\u96C6\u6210
 report.cim.url                                                     = \u4EE5\u4E0B\u662F\u5728\u672C\u9879\u76EE\u4E2D\u4F7F\u7528\u7684\u6301\u7EED\u96C6\u6210\u7CFB\u7EDF\u3002
 report.dependencies.column.artifactId                              = ArtifactId
+report.dependencies.column.classifier                              = \u7C7B\u7B26
 report.dependencies.column.description                             = \u63CF\u8FF0
 report.dependencies.column.groupId                                 = GroupId
 report.dependencies.column.optional                                = \u5907\u6CE8
+report.dependencies.column.type                                    = \u7C7B\u578B
 report.dependencies.column.url                                     = URL
 report.dependencies.column.version                                 = \u7248\u672C
 report.dependencies.description                                    = \u8FD9\u4E00\u6587\u6863\u5217\u51FA\u4E86\u9879\u76EE\u7684\u4F9D\u8D56\u5E76\u63D0\u4F9B\u4E86\u6BCF\u4E2A\u4F9D\u8D56\u7684\u76F8\u5173\u4FE1\u606F\u3002
+report.dependencies.file.details.column.classes                    = \u7C7B
+report.dependencies.file.details.column.debug                      = \u8C03\u8BD5
+report.dependencies.file.details.column.entries                    = \u6761\u76EE
+report.dependencies.file.details.column.file                       = \u6587\u4EF6
+report.dependencies.file.details.column.jdkrev                     = JDK\u7248\u672C
+report.dependencies.file.details.column.packages                   = \u5305
+report.dependencies.file.details.column.sealed                     = \u5BC6\u5C01\u7684
+report.dependencies.file.details.column.size                       = \u5927\u5C0F
+report.dependencies.file.details.title                             = \u4F9D\u8D56\u6587\u4EF6\u8BE6\u7EC6\u4FE1\u606F
 report.dependencies.graph.tables.licenses                          = \u6267\u7167
-report.dependencies.graph.tables.unknown                           =
+report.dependencies.graph.tables.title                             = \u4F9D\u8D56\u5217\u8868
+report.dependencies.graph.tables.unknown                           = \u672A\u77E5
+report.dependencies.graph.title                                    = \u9879\u76EE\u4F9D\u8D56\u56FE
+report.dependencies.graph.tree.title                               = \u9879\u76EE\u4F9D\u8D56\u6811 
 report.dependencies.intro.compile                                  = \u4EE5\u4E0B\u662F\u8FD9\u4E00\u9879\u76EE\u7684\u7F16\u8BD1\u4F9D\u8D56\u5217\u8868\u3002\u7F16\u8BD1\u548C\u8FD0\u884C\u672C\u5E94\u7528\u9700\u8981\u8FD9\u4E9B\u4F9D\u8D56\u3002
 report.dependencies.intro.provided                                 = \u4EE5\u4E0B\u662F\u8FD9\u4E00\u9879\u76EE\u7684\u5DF2\u63D0\u4F9B\u7684\u4F9D\u8D56\u5217\u8868\u3002\u7F16\u8BD1\u672C\u5E94\u7528\u65F6\u9700\u8981\u8FD9\u4E9B\u4F9D\u8D56,\u4F46\u8FD9\u4E9B\u4F9D\u8D56\u5E93\u5728\u4F7F\u7528\u65F6\u4F1A\u9ED8\u8BA4\u63D0\u4F9B\u3002
 report.dependencies.intro.runtime                                  = \u4EE5\u4E0B\u662F\u8FD9\u4E00\u9879\u76EE\u7684\u8FD0\u884C\u65F6\u4F9D\u8D56\u5217\u8868\u3002\u8FD0\u884C\u672C\u5E94\u7528\u9700\u8981\u8FD9\u4E9B\u4F9D\u8D56\u3002
@@ -52,7 +66,19 @@ report.dependencies.intro.system                                   = \u4EE5\u4E0
 report.dependencies.intro.test                                     = \u4EE5\u4E0B\u662F\u8FD9\u4E00\u9879\u76EE\u7684\u6D4B\u8BD5\u4F9D\u8D56\u5217\u8868\u3002\u8FD9\u4E9B\u4F9D\u8D56\u4EC5\u4EC5\u5728\u7F16\u8BD1\u548C\u8FD0\u884C\u672C\u5E94\u7528\u4E2D\u7684\u5355\u5143\u6D4B\u8BD5\u65F6\u9700\u8981\u3002
 report.dependencies.name                                           = \u9879\u76EE\u4F9D\u8D56
 report.dependencies.nolist                                         = \u672C\u9879\u76EE\u4E2D\u6CA1\u6709\u4F9D\u8D56\u3002\u8FD9\u662F\u4E00\u4E2A\u72EC\u7ACB\u7684\u5E94\u7528\uFF0C\u4E0D\u4F9D\u8D56\u4E8E\u5176\u4ED6\u4EFB\u4F55\u9879\u76EE\u3002
+report.dependencies.repo.locations.artifact.breakdown              = \u6BCF\u4E2A\u4F9D\u8D56\u7684\u4ED3\u5E93\u5730\u5740
+report.dependencies.repo.locations.cell.release.disabled           = -
+report.dependencies.repo.locations.cell.release.enabled            = \u662F
+report.dependencies.repo.locations.cell.snapshot.disabled          = -
+report.dependencies.repo.locations.cell.snapshot.enabled           = \u662F
+report.dependencies.repo.locations.column.artifact                 = Artifact 
+report.dependencies.repo.locations.column.release                  = \u7248\u672C
+report.dependencies.repo.locations.column.repoid                   = \u4ED3\u5E93id 
+report.dependencies.repo.locations.column.snapshot                 = \u5FEB\u7167
+report.dependencies.repo.locations.column.url                      = URL
+report.dependencies.repo.locations.title                           = \u4F9D\u8D56\u4ED3\u5E93\u5730\u5740
 report.dependencies.title                                          = \u9879\u76EE\u4F9D\u8D56
+report.dependencies.unamed                                         = \u672A\u547D\u540D
 report.dependency-convergence.convergence.caption                  = \u5B50\u9879\u76EE\u4E2D\u4F7F\u7528\u7684\u4F9D\u8D56
 report.dependency-convergence.description                          = \u672C\u6587\u6863\u63D0\u4F9B\u4E86\u6574\u4E2A\u9879\u76EE\u4EE5\u53CA\u9879\u76EE\u7684\u5B50\u6A21\u5757\u4E2D\u6240\u6709\u4F9D\u8D56\u7684\u7248\u672C\u4E00\u81F4\u6027\u4FE1\u606F\u3002
 report.dependency-convergence.legend                               = \u8BF4\u660E:
@@ -138,6 +164,24 @@ report.scm.title                                                   = \u6E90\u4EE
 report.scm.webaccess.nourl                                         = \u672C\u9879\u76EE\u4E2D\u6CA1\u6709\u5217\u51FA\u5728\u7EBF\u6E90\u4EE3\u7801\u5E93\u3002\u8BF7\u8FC7\u4E00\u6BB5\u65F6\u95F4\u518D\u67E5\u770B\u3002
 report.scm.webaccess.title                                         = Web\u8BBF\u95EE
 report.scm.webaccess.url                                           = \u4EE5\u4E0B\u662F\u5728\u7EBF\u6E90\u4EE3\u7801\u5E93\u7684\u94FE\u63A5\u3002
+report.summary.build.artifactid                                    = ArtifactId
+report.summary.build.groupid                                       = GroupId
+report.summary.build.title                                         = \u6784\u5EFA\u4FE1\u606F
+report.summary.build.type                                          = \u7C7B\u578B
+report.summary.build.version                                       = \u7248\u672C
+report.summary.description                                         = \u6B64\u6587\u6863\u5217\u51FA\u4E86\u8BE5\u9879\u76EE\u5176\u5B83\u7684\u76F8\u5173\u4FE1\u606F
+report.summary.field                                               = \u5B57\u6BB5
+report.summary.general.description                                 = \u63CF\u8FF0
+report.summary.general.homepage                                    = \u4E3B\u9875
+report.summary.general.name                                        = \u540D\u79F0
+report.summary.general.title                                       = \u9879\u76EE\u4FE1\u606F
+report.summary.name                                                = \u9879\u76EE\u6982\u8981
+report.summary.organization.name                                   = \u540D\u79F0
+report.summary.organization.title                                  = \u9879\u76EE\u7EC4\u7EC7
+report.summary.organization.url                                    = URL
+report.summary.noorganization                                      = \u8BE5\u9879\u76EE\u4E0D\u5C5E\u4E8E\u67D0\u4E2A\u7EC4\u7EC7
+report.summary.title                                               = \u9879\u76EE\u6982\u8981
+report.summary.value                                               = \u503C
 report.team-list.contributors.actualtime                           = \u5F53\u5730\u65F6\u95F4(GMT)
 report.team-list.contributors.email                                = \u7535\u5B50\u90AE\u4EF6
 report.team-list.contributors.intro                                = \u4EE5\u4E0B\u7684\u5176\u4ED6\u4EBA\u901A\u8FC7\u5EFA\u8BAE\uFF0C\u8865\u4E01\u6216\u8005\u6587\u6863\u5BF9\u672C\u9879\u76EE\u505A\u51FA\u4E86\u8D21\u732E\u3002
