--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -48,7 +48,7 @@ report.dependencies.description                                    = Ce document
 report.dependencies.file.details.column.classes                    = Classes
 report.dependencies.file.details.column.debug                      = Debug
 report.dependencies.file.details.column.entries                    = Entr\u00E9es
-report.dependencies.file.details.column.file                       = Nome du fichier
+report.dependencies.file.details.column.file                       = Nom du fichier
 report.dependencies.file.details.column.jdkrev                     = R\u00E9vision du JDK
 report.dependencies.file.details.column.packages                   = Packages
 report.dependencies.file.details.column.sealed                     = Scell\u00E9
