[MPIR-94] Change optional label in dependencies site
o Swedish translation.

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@659281 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_sv.properties
+++ b/src/main/resources/project-info-report_sv.properties
@@ -41,6 +41,8 @@ report.dependencies.column.classifier                              = Klassificer
 report.dependencies.column.description                             = Beskrivning
 report.dependencies.column.groupId                                 = GroupId
 report.dependencies.column.optional                                = Valfri
+report.dependencies.column.isOptional                              = Ja
+report.dependencies.column.isNotOptional                           = Nej
 report.dependencies.column.type                                    = Typ
 report.dependencies.column.url                                     = URL
 report.dependencies.column.version                                 = Version
