o used unicode provided by Properties Editor Eclipse Plugin
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@674135 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_tr.properties
+++ b/src/main/resources/project-info-report_tr.properties
@@ -15,36 +15,36 @@
 # specific language governing permissions and limitations
 # under the License.
 
-report.cim.access                                                  = Eriþim
+report.cim.access                                                  = Eri\u00feim
 report.cim.anthill.intro                                           = This project uses {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
 report.cim.buildforge.intro                                        = This project uses {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.cim.continuum.intro                                         = Bu proje Continuum uygulamasýný kullanýr {Continuum, http://maven.apache.org/continuum/}.
+report.cim.continuum.intro                                         = Bu proje Continuum uygulamas\u00fdn\u00fd kullan\u00fdr {Continuum, http://maven.apache.org/continuum/}.
 report.cim.cruisecontrol.intro                                     = This project uses {CruiseControl, http://cruisecontrol.sourceforge.net/}.
-report.cim.description                                             = Bu link kodlarý sýk aralýklarla ve belirli bir temelde derleyen ve test eden tüm sürekli entegrasyon proseslerine eriþim saðlar.
-report.cim.general.intro                                           = Bu proje Sürekli Entegrasyon Sistemi uygulamasýný kullanýr.
+report.cim.description                                             = Bu link kodlar\u00fd s\u00fdk aral\u00fdklarla ve belirli bir temelde derleyen ve test eden t\u00fcm s\u00fcrekli entegrasyon proseslerine eri\u00feim sa\u00f0lar.
+report.cim.general.intro                                           = Bu proje S\u00fcrekli Entegrasyon Sistemi uygulamas\u00fdn\u00fd kullan\u00fdr.
 report.cim.hudson.intro                                            = This project uses {Hudson, https://hudson.dev.java.net/}.
 report.cim.luntbuild.intro                                         = This project uses {Luntbuild, http://luntbuild.javaforge.com/}.
-report.cim.name                                                    = Sürekli Entegrasyon
-report.cim.nocim                                                   = Herhangi bir Sürekli Entegrasyon Yönetim Sistemi tanýmlanmamýþtýr. Lütfen ileri bir tarihte tekrar kontrol ediniz.
+report.cim.name                                                    = S\u00fcrekli Entegrasyon
+report.cim.nocim                                                   = Herhangi bir S\u00fcrekli Entegrasyon Y\u00f6netim Sistemi tan\u00fdmlanmam\u00fd\u00fet\u00fdr. L\u00fctfen ileri bir tarihte tekrar kontrol ediniz.
 report.cim.notifiers.column.address                                = Adres
-report.cim.notifiers.column.configuration                          = Konfigürasyon
+report.cim.notifiers.column.configuration                          = Konfig\u00fcrasyon
 report.cim.notifiers.column.type                                   = Tip
-report.cim.notifiers.intro                                         = Kullanýcý bilgileri ve uyarý modunu içeren, yazýlým geliþtiricileri veya kullanýcýlarý baþarýsýz bir derleme iþlemi için uyaran konfigürasyon.
-report.cim.notifiers.nolist                                        = Herhangi bir uyarýcý tanýmlanmamýþtýr. Lütfen ileri bir tarihte tekrar kontrol ediniz.
+report.cim.notifiers.intro                                         = Kullan\u00fdc\u00fd bilgileri ve uyar\u00fd modunu i\u00e7eren, yaz\u00fdl\u00fdm geli\u00fetiricileri veya kullan\u00fdc\u00fdlar\u00fd ba\u00fear\u00fds\u00fdz bir derleme i\u00felemi i\u00e7in uyaran konfig\u00fcrasyon.
+report.cim.notifiers.nolist                                        = Herhangi bir uyar\u00fdc\u00fd tan\u00fdmlanmam\u00fd\u00fet\u00fdr. L\u00fctfen ileri bir tarihte tekrar kontrol ediniz.
 report.cim.notifiers.title                                         = Notifiers
 report.cim.nourl                                                   = No url to the continuous integration system is defined.
 report.cim.overview.title                                          = Overview
 report.cim.title                                                   = Continuous Integration
-report.cim.url                                                     = Aþaðýda proje tarafýndan kullanýlan Sürekli Entegrasyon Sistemi eriþimini saðlayan link bulunmaktadýr.
+report.cim.url                                                     = A\u00fea\u00f0\u00fdda proje taraf\u00fdndan kullan\u00fdlan S\u00fcrekli Entegrasyon Sistemi eri\u00feimini sa\u00f0layan link bulunmaktad\u00fdr.
 report.dependencies.column.artifactId                              = ArtifactId
 report.dependencies.column.classifier                              = Classifier
-report.dependencies.column.description                             = Taným
+report.dependencies.column.description                             = Tan\u00fdm
 report.dependencies.column.groupId                                 = GroupId
 report.dependencies.column.optional                                = Opsiyonel
 report.dependencies.column.type                                    = Tip
 report.dependencies.column.url                                     = URL
 report.dependencies.column.version                                 = Versiyon
-report.dependencies.description                                    = Bu doküman projenin baðýmlýlýklarýný listeler ve her bir baðýmlýlýk hakkýnda bilgi verir.
+report.dependencies.description                                    = Bu dok\u00fcman projenin ba\u00f0\u00fdml\u00fdl\u00fdklar\u00fdn\u00fd listeler ve her bir ba\u00f0\u00fdml\u00fdl\u00fdk hakk\u00fdnda bilgi verir.
 report.dependencies.file.details.column.classes                    = Classes
 report.dependencies.file.details.column.debug                      = Debug
 report.dependencies.file.details.column.entries                    = Entries
@@ -231,6 +231,6 @@ report.dependencyManagement.intro.runtime                          = The followi
 report.dependencyManagement.intro.system                           = The following is a list of system dependencies in the DependencyManagement of this project. These dependencies can be included in the submodules to compile the submodule:
 report.dependencyManagement.intro.test                             = The following is a list of test dependencies in the DependencyManagement of this project. These dependencies can be included in the submodules to compile and run unit tests for the submodule:
 report.pluginManagement.name                                       = Plugin Management
-report.pluginManagement.description                                = This document lists the plugins that are defined through pluginManagement. 
+report.pluginManagement.description                                = This document lists the plugins that are defined through pluginManagement.
 report.pluginManagement.title                                      = Project Plugin Management
 report.pluginManagement.nolist                                     = There are no plugins in the PluginManagement of this project.
