[MPIR-109] Wrong description of in source repository overview
o Fixed for the following locales: en, de, no, sv, tr.

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@674345 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_de.properties
+++ b/src/main/resources/project-info-report_de.properties
@@ -149,7 +149,7 @@ report.scm.devaccess.cvs.intro                                     = Nur Projekt
 report.scm.devaccess.general.intro                                 = Konsultieren Sie die Dokumentation des verwendeten Quellcode Archiv Management Systems f\u00fcr weitere Informationen \u00fcber Entwickler Zugriff unter\:
 report.scm.devaccess.perforce.intro                                = Nur Projekt Entwickler k\u00f6nnen mit dieser Methode auf den Perforce Baum zugreifen. Ersetzen Sie 'username' mit dem entsprechenden Wert.
 report.scm.devaccess.starteam.intro                                = Nur Projekt Entwickler k\u00f6nnen mit dieser Methode auf den Starteam Baum zugreifen. Ersetzen Sie 'username' mit dem entsprechenden Wert.
-report.scm.devaccess.svn.intro1.https                              = Jeder kann auf das Subversion Archiv via HTTPS zugreifen, aber Entwickler m\u00fcssen das Subversion Archiv via HTTPS auschecken.
+report.scm.devaccess.svn.intro1.https                              = Jeder kann auf das Subversion Archiv via HTTP zugreifen, aber Entwickler m\u00fcssen das Subversion Archiv via HTTPS auschecken.
 report.scm.devaccess.svn.intro1.other                              = Entwickler m\u00fcssen das Subversion Archiv auschecken.
 report.scm.devaccess.svn.intro1.svn                                = Entwickler m\u00fcssen das Subversion Archiv via SVN auschecken.
 report.scm.devaccess.svn.intro1.svnssh                             = Entwickler m\u00fcssen das Subversion Archiv via SVN+SSH auschecken.
