--- a/src/main/resources/project-info-report_no.properties
+++ b/src/main/resources/project-info-report_no.properties
@@ -112,7 +112,7 @@ report.scm.accessbehindfirewall.svn.intro                          = For de utvi
 report.scm.accessbehindfirewall.title                              = Tilgang fra ba en brannmur
 report.scm.accessthroughtproxy.svn.intro1                          = Subversion klienten kan g\u00E5 igjennom en proxy, dersom du konfigurerer den til det. F\u00F8rst, rediger din "servere" konfigurasjons fil for \u00E5 indikere hvilken proxy den skal bruke. Disse filenes plassering avhenger av operativ system. P\u00E5 Linux eller Unix er disse plasserr i katalogen "~/.subversion". I Windows finnes disse i "%APPDATA%\\Subversion". (Pr\u00F8v "echo %APPDATA%", nb! dette er en skjult katalog.)
 report.scm.accessthroughtproxy.svn.intro2                          = Det er kommentarer i filea som forklarer hva som m\u00E5 gj\u00F8res. Dersom du ike har denne filen, last ned siste versjon av Subversion klienten og kj\u00F8r hvilken som helst kommando for denne; Dette vil medf\u00F8re at konfigurasjons katalogen og en mal fil blir opprettet.
-report.scm.accessthroughtproxy.svn.intro3                          = Eksempel : Rediger "servers" fila og legg til noe lignende:
+report.scm.accessthroughtproxy.svn.intro3                          = Eksempel: Rediger "servers" fila og legg til noe lignende:
 report.scm.accessthroughtproxy.title                               = Tilgang gjennom en proxy
 report.scm.anonymousaccess.cvs.intro                               = Dette prosjektets CVS repository kan sjekkes ut gjennom anonym CVS med f\u00F8lgende instruksjoner. N\u00E5r spurt om passord for anonymous, trykk bare p\u00E5 retur tasten.
 report.scm.anonymousaccess.general.intro                           = Sjekk dokumentasjonen for versjonshandterings systemer som brukes for mer informasjon om anonym utsjeking. Aksess url er:
@@ -126,7 +126,7 @@ report.scm.devaccess.cvs.intro                                     = Kun prosjek
 report.scm.devaccess.general.intro                                 = Se i dokumentasjone til versjonshandterings systemet for mer informasjon om utsjekking for utviklere. Aksess url er:
 report.scm.devaccess.perforce.intro                                = Kun prosjektets utviklere kan aksessere Perforce treet via denne metoden. Erstatt brukernavn med riktig verdi.
 report.scm.devaccess.starteam.intro                                = Kun prosjektets utviklere kan aksessere Starteam treet via denne metoden. Erstatt brukernavn med riktig verdi.
-report.scm.devaccess.svn.intro1.https                              = Alle kan aksessere Subversion repository via HTTPS, men innmeldere m\u00E5 sjekke ut Subversion repository via HTTPS.
+report.scm.devaccess.svn.intro1.https                              = Alle kan aksessere Subversion repository via HTTP, men innmeldere m\u00E5 sjekke ut Subversion repository via HTTPS.
 report.scm.devaccess.svn.intro1.other                              = Innmeldere m\u00E5 sjekke ut Subversion repository.
 report.scm.devaccess.svn.intro1.svn                                = Innmeldere m\u00E5 sjekke ut Subversion repository via SVN.
 report.scm.devaccess.svn.intro1.svnssh                             = Innmeldere m\u00E5 sjekke ut Subversion repository via SVN+SSH.
