--- a/src/main/resources/project-info-report_tr.properties
+++ b/src/main/resources/project-info-report_tr.properties
@@ -129,11 +129,11 @@ report.mailing-lists.nolist                                        = There are n
 report.mailing-lists.title                                         = Project Mailing Lists
 report.scm.accessbehindfirewall.cvs.intro                          = For those developers who are stuck behind a corporate firewall, {CVSGrab, http://cvsgrab.sourceforge.net/} can use the viewcvs web interface to checkout the source code.
 report.scm.accessbehindfirewall.general.intro                      = Refer to the documentation of the SCM used for more information about access behind a firewall.
-report.scm.accessbehindfirewall.svn.intro                          = For those users who are stuck behind a corporate firewall which is blocking http access to the Subversion repository, you can try to access it via the developer connection:
+report.scm.accessbehindfirewall.svn.intro                          = For those users who are stuck behind a corporate firewall which is blocking HTTP access to the Subversion repository, you can try to access it via the developer connection:
 report.scm.accessbehindfirewall.title                              = Access from behind a firewall
 report.scm.accessthroughtproxy.svn.intro1                          = The Subversion client can go through a proxy, if you configure it to do so. First, edit your "servers" configuration file to indicate which proxy to use. The file's location depends on your operating system. On Linux or Unix it is located in the directory "~/.subversion". On Windows it is in "%APPDATA%\\Subversion". (Try "echo %APPDATA%", note this is a hidden directory.)
 report.scm.accessthroughtproxy.svn.intro2                          = There are comments in the file explaining what to do. If you don't have that file, get the latest Subversion client and run any command; this will cause the configuration directory and template files to be created.
-report.scm.accessthroughtproxy.svn.intro3                          = Example : Edit the 'servers' file and add something like :
+report.scm.accessthroughtproxy.svn.intro3                          = Example: Edit the 'servers' file and add something like:
 report.scm.accessthroughtproxy.title                               = Access through a proxy
 report.scm.anonymousaccess.cvs.intro                               = This project's CVS repository can be checked out through anonymous CVS with the following instruction set. When prompted for a password for anonymous, simply press the Enter key.
 report.scm.anonymousaccess.general.intro                           = Refer to the documentation of the SCM used for more information about anonymously check out. The connection url is:
@@ -147,7 +147,7 @@ report.scm.devaccess.cvs.intro                                     = Only projec
 report.scm.devaccess.general.intro                                 = Refer to the documentation of the SCM used for more information about developer check out. The connection url is:
 report.scm.devaccess.perforce.intro                                = Only project developers can access the Perforce tree via this method. Substitute username and password with the proper values.
 report.scm.devaccess.starteam.intro                                = Only project developers can access the Starteam tree via this method. Substitute username with the proper value.
-report.scm.devaccess.svn.intro1.https                              = Everyone can access the Subversion repository via HTTPS, but Committers must checkout the Subversion repository via HTTPS.
+report.scm.devaccess.svn.intro1.https                              = Everyone can access the Subversion repository via HTTP, but Committers must checkout the Subversion repository via HTTPS.
 report.scm.devaccess.svn.intro1.other                              = Committers must checkout the Subversion repository.
 report.scm.devaccess.svn.intro1.svn                                = Committers must checkout the Subversion repository via SVN.
 report.scm.devaccess.svn.intro1.svnssh                             = Committers must checkout the Subversion repository via SVN+SSH.
