--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -56,7 +56,7 @@ report.dependencies.file.details.column.packages                   = Packages
 report.dependencies.file.details.column.sealed                     = Scell\u00e9
 report.dependencies.file.details.column.size                       = Taille
 report.dependencies.file.details.title                             = D\u00e9tails du fichier de d\u00e9pendances
-report.dependencies.graph.tables.licenses                          = Licence
+report.dependencies.graph.tables.licenses                          = Licences
 report.dependencies.graph.tables.unknown                           = Inconnu
 report.dependencies.graph.title                                    = Graphe des d\u00e9pendances du projet
 report.dependencies.graph.tree.title                               = Arbre des d\u00e9pendances
