MPIR-123: Hungarian language bundle - encoding problems and improvements
o applied r539737

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@676451 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_hu.properties
+++ b/src/main/resources/project-info-report_hu.properties
@@ -134,9 +134,14 @@ report.cim.description=Link a CI folyamatok meghat\u00e1roz\u00e1saira, amelyek 
 report.cim.nocim=No continuous integration management system is defined. Please check back at a later date.
 report.cim.title=Continuous Integration
 report.cim.overview.title=\u00c1ttekint\u00e9s
+report.cim.anthill.intro=Ez a projekt {Anthill, http://www.anthillpro.com/html/products/anthillos/} rendszert haszn\u00C3\u00A1l.
+report.cim.buildforge.intro=Ez a projekt {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/} rendszert haszn\u00C3\u00A1l.
 report.cim.continuum.intro=Ez a projekt {Continuum, http://maven.apache.org/continuum/} rendszert haszn\u00e1l.
+report.cim.cruisecontrol.intro=Ez a projekt {CruiseControl, http://cruisecontrol.sourceforge.net/} rendszert haszn\u00C3\u00A1l.
 report.cim.bugzilla.intro=Ez a projekt {Bugzilla, http://www.bugzilla.org/} rendszert haszn\u00e1l.
 report.cim.general.intro=A projekt CI rendszert haszn\u00e1l.
+report.cim.hudson.intro=Ez a projekt {Hudson, https://hudson.dev.java.net/} rendszert haszn\u00C3\u00A1l.
+report.cim.luntbuild.intro=Ez a projekt {Luntbuild, http://luntbuild.javaforge.com/} rendszert haszn\u00C3\u00A1l.
 report.cim.access=Hozz\u00e1f\u00e9r\u00e9s
 report.cim.url=Link a porjekt \u00e1ltal haszn\u00e1lt CI rendszerhez:
 report.cim.nourl=Nincs meghat\u00e1rozva URL a CI rendszerhez.
